--- a/thesis/bitr/intro.tex
+++ b/thesis/bitr/intro.tex
@@ -1,4 +1,5 @@
-%Introduction
+First, we examine the problem of binary type recovery without Holmes.
+This system was designed prior to Holmes, but gave the inspiration for most of its features, as is shown along the way.
 
 \section{Introduction}
 \begin{savenotes}
